Fixed views menu on mobile

--- a/sass/_page-env.scss
+++ b/sass/_page-env.scss
@@ -76,47 +76,52 @@
         bottom: 20px;
     }
 
-    #model-menu-toggle:checked ~ #menu-btn {
-        opacity: 1;
-        background: url(../img/spritesheet.svg) -85px -101px  
-    }
-
-    #model-menu-toggle:checked ~ #model-views {
-        width:100%;
-        height: 160px;
-        visibility: visible;
-        opacity: 1;
-    }
 
     #model-menu-btn {
-        width: 80px;
-        height: auto;
-        overflow: hidden;  
         position: absolute;
         left: 0;
         right: 0;
         bottom: 0;
+        margin-right: 0;
         cursor: pointer;
+        font-size: 5rem;
+        text-align: center;
+        line-height: 50px;
         opacity: 0.35;
-        background: red;
         z-index: 2;
+        &:before {
+           content: "\2d";
+        }
+    }
+
+    #model-views {
+        height: 0;
+        overflow: hidden;
+        margin-bottom: 23px;
+        padding: 10px 10px 40px;
+        opacity: 0;
+        text-align: center;
+        visibility: hidden;
+        background: #222;
     }
 
     #model-menu-btn:hover {
         opacity: 1;
     }
 
-    #model-views {
-        width: 100%;
-        height: 0;
-        overflow: hidden;
-        margin-bottom: 18px;
-        padding: 10px 10px 40px;
-        opacity: 0;
-        text-align: center;
-        visibility: hidden;
-        transition: all .3s;
-        background: #222;
+    #model-menu-toggle:checked ~ #model-menu-btn {
+        font-size: 3rem;
+        opacity: 1;
+    }
+
+    #model-menu-toggle:checked ~ #model-menu-btn:before {
+        content: "x";
+    }
+
+    #model-menu-toggle:checked ~ #model-views {
+        height: 160px;
+        visibility: visible;
+        opacity: 1;
     }
 
     // .btn {
